--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,20 @@
-machine:
-  node:
-    version: 8.9.3
-test:
-  override:
-    - yarn test -- --coverage
-  post:
-    - npm install -g codeclimate-test-reporter
-    - codeclimate-test-reporter < coverage/lcov.info
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/node:8.9.3
+    steps:
+      - checkout
+      - run: yarn
+  test:
+    docker:
+      - image: circleci/node:8.9.3
+    steps:
+      - checkout
+      - run: yarn start
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
