--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/node:8.9.3
     steps:
       - checkout
-      - run: yarn
+      - run: yarn install
   test:
     docker:
       - image: circleci/node:8.9.3
