--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  install:
     docker:
       - image: circleci/node:8.9.3
     steps:
@@ -14,7 +14,9 @@ jobs:
       - run: yarn start
 workflows:
   version: 2
-  build_and_test:
+  install_and_test:
     jobs:
-      - build
+      - install
       - test
+        requires:
+          - install
