--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: ./cc-test-reporter before-build
       - run: yarn install
       - run: yarn test --coverage
-      - run: ./cc-test-reporter after-build --exit-code $EXIT_CODE
+      - run: ./cc-test-reporter after-build --exit-code $?
 workflows:
   version: 2
   build_and_test:
