created public api for modular game engines

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conway-game-of-life-js",
-  "version": "0.1.1",
-  "main": "src/game-of-life.js",
+  "version": "0.2.0",
+  "main": "src/game-of-life/game-of-life.js",
   "dependencies": {
     "immutable": "^3.8.2",
     "joi": "^13.1.0",
